--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate": "nuxt generate",
     "lint": "yarn lint:js",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm install && npm run build && npm run dev"
   },
   "dependencies": {
     "@nuxt/http": "latest",
